--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
-  "homepage": "https://github.com/geokoord/node-geodesy#readme"
+  "homepage": "https://github.com/geokoord/node-geodesy#readme",
+  "dependencies": {
+    "uuid": "^8.3.2"
+  }
 }
